@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+3/18/22: Fixed running Python scripts from RunScriptInFile and prevented this
+from being called from Python (In 4.0).
+
 3/17/22: Fixed drawing of low dose areas with Balance Shifts on (In 4.0).
 
 3/11/22: Fixed align flag being sent to K2/K3 when dose frac is not selected
